<resources>
    <string name="app_name">Pawprints</string>
    <string name="searchresults">Here are your search results</string>
    <string name="results">Results</string>
    <string name="color">Color: </string>
    <string name="temperament">Temperament:</string>
    <string name="comments">Comments:</string>
    <string name="distance">Distance:</string>
    <string name="details">Pet Details</string>
    <string name="username">Some Guy</string>
    <string name="points">1,284 Points</string>
    <string name="lost">Lost Pet Search</string>
    <string name="ask">Did you...</string>
    <string name="lose">Lose</string>
    <string name="find">Find</string>
    <string name="message">Messages</string>
    <string name="lostheader">Search for your lost pet</string>
    <string name="location">Location</string>
    <string name="found">Submit the details of a pet you found</string>
    <string name="submitpet">Found Pet Submission</string>
    <string name="success">Lost pet has been successfully submitted.</string>
    <string name="successtitle">Submission Success</string>
    <string name="ok">OK</string>
    <string name="messageHeader">Below is the list of users you\'ve messaged</string>
    <string name="messages">Messages</string>

    <string name="submitMessage">Submit Message</string>
    <string name="sendMessage">Send Message</string>
    <string name="messageHistory">Message History</string>
    <string name="title_activity_found_pet_one">FoundPetOne</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reward">Reward:</string>
    <string name="missingReport">Missing Reports</string>
    <string name="petBreed">Pet\'s Breed</string>
    <string name="petTemperament">Pet\'s Temperament</string>
    <string name="friendly">Friendly</string>
    <string name="unfriendly">Unfriendly</string>
    <string name="colorBrown">Brown</string>
    <string name="colorYellow">Yellow</string>
    <string name="colorGrey">Grey</string>
    <string name="colorBlack">Black</string>
    <string name="colorWhite">White</string>
    <string name="petColors">Pet Color(s):</string>
    <string name="defaultName">Name - Type, Breed</string>
</resources>
