<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/viewPhoto"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@android:color/black"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/viewBreedType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/defaultName"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                android:textStyle="bold"
                android:paddingTop="12dp"/>

            <TextView
                android:id="@+id/viewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Posted 2 hours ago."
                android:textSize="14dp" />

            <TextView
                android:id="@+id/viewColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/color"
                android:textColor="@android:color/black"
                android:textSize="14dp" />


            <TextView
                android:id="@+id/viewTemperament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/temperament"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/viewReward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reward"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/viewComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/comments"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="128dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginTop="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/avatar"
                android:layout_margin="8dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginTop="4dp"
                    android:layout_margin="4dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:layout_margin="4dp"
                    android:textSize="12dp"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/contactLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/holo_blue_dark"
                android:src="@android:drawable/ic_dialog_email"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
</ScrollView>